# sodukuSolver

./: .gitignore  CMakeLists.txt  advancedSolveFunctions.c  advancedSolveFunctions.h  cellFunctions.c  cellFunctions.h  config.h  dangerousCellFunctions.c  dangerousCellFunctions.h  global.c  global.h  main.c  main.h  patturnSolveFunctions.c  patturnSolveFunctions.h  printFunctions.c  printFunctions.h  simpleSolveFunctions.c  simpleSolveFunctions.h  solveFunctions.c  solveFunctions.h  utilityFunctions.c  utilityFunctions.h
